# Mastery-Project-Masterschool

./: README.md  README_DE.md  requirements-optional.txt  requirements.txt  setup_notebooks.py  setup_project.py
data/: README.md
data/bronze/: import_csv.py
mastery-project-masterschool/: .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  OPERATIONS.md  README.md  SECURITY.md  pyproject.toml
mastery-project-masterschool/.github/: pull_request_template.md
mastery-project-masterschool/.github/workflows/: ci.yml
mastery-project-masterschool/dashboards/: practice.py  test_model.py
mastery-project-masterschool/data/: README.md
mastery-project-masterschool/data/gold/: users_features.csv
mastery-project-masterschool/data/outputs/: perks.csv
mastery-project-masterschool/logs/: README.md
mastery-project-masterschool/notebooks/: 01_load_and_preview_data.ipynb  TravelTide Customer Segmentation.docx  data_cleansing_flights.ipynb  data_cleansing_hotels.ipynb  mastery-project-2025-cleaned.ipynb  mastery-project-2025.ipynb  weak_folds_summary.csv  weak_folds_summary_1.csv  weak_folds_summary_voting.csv  weak_folds_summary_xgb.csv  ~$avelTide Customer Segmentation.docx
mastery-project-masterschool/sql/: identifying_user_cohort.sql  validating_perks.sql
mastery-project-masterschool/src/mastery_project_masterschool/: __init__.py
mastery-project-masterschool/src/travel_perks/: README.md  __init__.py  assign.py  cli.py  config.py  io.py  logging.py  pipeline.py  reporting.py  schemas.py  segment.py  transform.py
mastery-project-masterschool/tests/: README.md  conftest.py  test_config.py  test_io.py  test_pipeline.py  test_segment_assign.py  test_transform.py
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_segmentation.ipynb  04_final_analysis.ipynb  README.md  mastery-project-2025.ipynb
outputs/: README.md
presentation/: README.md
sql/: README.md
sql/bronze/: data_cleansing.ipynb
src/: README.md  load_data.py  setup_repo_folder_structure.py
