[project]
name = "mastery-project-masterschool"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Konstantin Milonas", email = "info@condata.io" }
]
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "boto3>=1.37.33",
    "python-dotenv>=1.1.0",
    "ipykernel>=6.29.5",
    "s3fs>=2025.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mastery_project_masterschool"]
