[project]
name = "mastery-project-masterschool"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Konstantin Milonas", email = "info@condata.io" }
]
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "scikit-learn>=1.6.1",
    # latest stable as of now
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "boto3==1.34.76",
    # compatible with aiobotocore/s3fs
    "s3fs==2024.3.1",
    # avoids aiobotocore conflicts
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "imbalanced-learn>=0.13.0",
    "xgboost>=3.0.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mastery_project_masterschool"]
