[project]
name = "mastery-project-masterschool"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Konstantin Milonas", email = "info@condata.io" }
]
dependencies = [
    # Core data and ML libraries
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.6.1",
    # Configuration and CLI
    "pydantic==2.6.4",
    "click==8.1.7",
    # Data quality and reporting
    "great_expectations==0.18.14",
    "reportlab==4.4.0",
    # AWS/S3 access
    "boto3==1.34.76",
    "s3fs==2024.3.1",
    # Requests for robust HTTP downloads
    "requests==2.31.0",
]
requires-python = ">= 3.8"

[project.scripts]
travel_perks = "travel_perks.cli:execute"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.2.1",
    "pytest-cov==4.1.0",
    "ruff==0.3.4",
    "mypy==1.9.0",
    "pip-audit==2.7.3",
    "pre-commit==3.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/mastery_project_masterschool",
    "src/travel_perks",
]
